--- a/jsdoc-template/tmpl/layout.tmpl
+++ b/jsdoc-template/tmpl/layout.tmpl
@@ -3,27 +3,33 @@
 <head>
 	<meta charset="utf-8">
 	<title>JSDoc: <?js= title ?></title>
-	
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	
+
 	<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
 	<link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
+	<link type="text/css" rel="stylesheet" href="styles/gh-fork-ribbon.css">
 </head>
 
 <body data-page-title="<?js= title ?>">
+	<div class="github-fork-ribbon-wrapper right">
+		<div class="github-fork-ribbon">
+			<a href="https://github.com/synacorinc/frameworkless-view">Fork me on GitHub</a>
+		</div>
+	</div>
 
 	<div id="main">
-		
+
 		<h1 class="page-title"><?js= title ?></h1>
-		
+
 		<?js= content ?>
 	</div>
-	
+
 	<a class="menuLink">Menu</a>
-	
+
 	<nav>
 		<?js= this.nav ?>
 	</nav>
