--- a/docs/styles/jsdoc-default.css
+++ b/docs/styles/jsdoc-default.css
@@ -90,13 +90,13 @@ hr {
 		-ms-transition: all 300ms ease-in-out;
 		transition: all 300ms ease-in-out;
 	}
-	
+
 	body #main,
 	body #main section {
 		display: block !important;
 		overflow: hidden;
 	}
-	
+
 	body #main,
 	body footer {
 		margin-left: 0;
@@ -110,7 +110,7 @@ hr {
 			transform: translate3d(180px, 0, 0) !important;
 			opacity: 0.5;
 		}
-	
+
 	.menuLink {
 		display: inline-block;
 		position: fixed;
@@ -135,7 +135,7 @@ hr {
 			height: 100%;
 			background: rgba(0,0,0,0.7);
 		}
-	
+
 	.menuLink::before {
 		position: relative;
 		display: inline-block;
@@ -158,7 +158,7 @@ hr {
 		body.menu-open .menuLink::before {
 			left: 180px;
 		}
-	
+
 	body nav {
 		position: fixed;
 		left: -180px;
@@ -181,13 +181,24 @@ hr {
 			background: #333;
 			color: #FFF;
 		}
-	
+		/*
+		body nav li a.parent {
+			background: #777;
+			color: #FFF;
+		}
+		*/
+
 	body nav li a {
 		border: none !important;
 		padding-top: 7px;
 		padding-bottom: 7px;
 	}
-	
+	body nav ul ul a {
+		border: none !important;
+		padding-top: 3px;
+		padding-bottom: 3px;
+	}
+
 	body h1.page-title {
 		padding-left: 50px;
 		height: 29px;
@@ -196,7 +207,7 @@ hr {
 		color: #FFF;
 		border-bottom-color: #000;
 	}
-	
+
 	body #main > section.markdown {
 		padding-top: 20px;
 	}
@@ -206,12 +217,12 @@ hr {
 	body #main code {
 		font-size: 88%;
 	}
-	
+
 	body section {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
-	
+
 	body .code-caption {
 		display: block;
 		margin: 0;
@@ -220,7 +231,7 @@ hr {
 		-moz-border-radius: 0;
 		border-radius: 0;
 	}
-	
+
 	body h4.name {
 		font-size: 120%;
 	}
@@ -231,25 +242,25 @@ hr {
 	body h4.name span.type-signature:last-child {
 		top: 2px;
 	}
-	
+
 	body div.description {
 		font-size: 100%;
 		padding: 5px;
 		margin-left: -2px;
 		margin-right: -2px;
 	}
-	
+
 	body table {
 		font-size: 88%;
 	}
-	
+
 	/*
 	table table {
 		margin-left: -150% !important;
 		background: #FAFAFA;
 	}
 	*/
-	
+
 	table td.description h6 {
 		font-weight: normal;
 		color: #4183C4;
@@ -258,7 +269,7 @@ hr {
 	table td.description h6::before {
 		content: 'Show ';
 	}
-	
+
 	table td.description table {
 		/*
 		display: none;
@@ -295,7 +306,7 @@ hr {
 		transform: none;
 		opacity: 1;
 	}
-	
+
 	/*
 	table table thead, table table th {
 		display: none !important;
@@ -319,8 +330,8 @@ hr {
 		display: block !important;
 	}
 	*/
-	
-	
+
+
 	body pre.prettyprint.source.linenums {
 		left: 0;
 	}
@@ -373,11 +384,10 @@ section {
 	*/
 	background: #FFF;
 	padding: 5px 20px;
-	/*
-	-webkit-box-shadow: 1px 0 0 #EEE;
-	-moz-box-shadow: 1px 0 0 #EEE;
-	box-shadow: 1px 0 0 #EEE;
-	*/
+
+	-webkit-box-shadow: 1px 0 0 #E9E9E9;
+	-moz-box-shadow: 1px 0 0 #E9E9E9;
+	box-shadow: 1px 0 0 #E9E9E9;
 }
 
 .variation {
@@ -437,6 +447,10 @@ nav {
 	-webkit-overflow-scrolling: touch;
 }
 
+.nav-modules {
+	padding-bottom: 20px;
+}
+
 	nav ul,
 	nav ul li {
 		font-size: 100%;
@@ -446,8 +460,8 @@ nav {
 	}
 
 	nav h2 {
-		font-size: 140%;
-		padding: 10px 10px 5px;
+		font-size: 150%;
+		padding: 10px 6px 5px;
 		margin: 0;
 	}
 		nav h2 a,
@@ -458,20 +472,37 @@ nav {
 		}
 
 	nav h3 {
-		margin: 8px 0 0;
-		padding: 8px 6px 4px;
+		margin: 4px 0 0;
+		padding: 4px 8px 2px;
 		background: none;
 		border-top: 1px solid #DDD;
-		font-size: 120%;
+		font-size: 90%;
 		font-weight: normal;
-		color: #999;
+		color: #AAA;
+	}
+
+	nav h4 {
+		display: none;
+		font-size: 80%;
+		color: #CCC;
+		font-weight: normal;
+		padding: 2px 10px 0;
+		margin: 0;
+	}
+
+	nav ul ul a {
+		padding-top: 0;
+		padding-bottom: 0;
+		padding-left: 22px;
+		font-size: 84%;
+		color: #4C7994;
 	}
 
 	nav li a {
 		display: block;
 		position: relative;
 		margin-top: -1px;
-		padding: 2px 10px;
+		padding: 1px 10px;
 		border: 1px solid transparent;
 		border-width: 1px 0;
 		text-decoration: none;
@@ -481,6 +512,13 @@ nav {
 	nav li a:hover {
 		color: #0078D6;
 		text-decoration: underline;
+	}
+	nav li a.parent {
+		background-color: #F9F9F9;
+		border-color: #EAEAEA;
+		border-right-color: #FBFBFB;
+		color: #2C5974;
+		text-decoration: none;
 	}
 	nav li a.current {
 		background-color: #FFF;
@@ -639,12 +677,15 @@ div.description {
 }
 
 article dl dt h4.name {
-	border-top: 1px dotted #CCC;
-	margin-top: 20px;
-	padding-top: 20px;
+	box-shadow: 0 -1px 0 #E9E9E9;
+	border-top: 20px solid #F9F9F9;
+	margin: 50px -20px 0;
+	padding: 40px 20px 0;
 }
 article dl dt:first-child h4.name {
 	border-top: none;
+	margin-top: 0;
+	padding-top: 20px;
 }
 
 article dl dd,
@@ -724,6 +765,10 @@ pre.prettyprint.source.linenums > * {
 	-moz-tab-size: 4;
 	tab-size: 4;
 	white-space: no-wrap;
+	min-width: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .prettyprint li code {
