--- a/jsdoc-template/tmpl/layout.tmpl
+++ b/jsdoc-template/tmpl/layout.tmpl
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>JSDoc: <?js= title ?></title>
+	<title><?js= env.opts.pagetitle ?>: <?js= title ?></title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -17,7 +17,7 @@
 <body data-page-title="<?js= title ?>">
 	<div class="github-fork-ribbon-wrapper right">
 		<div class="github-fork-ribbon">
-			<a href="https://github.com/synacorinc/frameworkless-view">Fork me on GitHub</a>
+			<a href="https://github.com/<?js= env.opts.github ?>">Fork me on GitHub</a>
 		</div>
 	</div>
 
